<resources>
    <string name="app_name">BlackJack Ltd</string>
    <string name="welcome_message">Welcome to BlackJack Ltd!</string>
    <string name="start_solo">Start Solo Campaign</string>
    <string name="start_coop">Start Co-op Mission</string>
    <string name="stats">Statistics</string>
    <string name="reset">Reset Game Data</string>
    <string name="local_match">Local Match</string>
    <string name="host_match">Host a Match</string>
    <string name="join_match">Join a Match</string>
    <string name="dealer">DEALER</string>
    <string name="player">PLAYER</string>
    <string name="p1">PLAYER 1</string>
    <string name="p2">PLAYER 2</string>
    <string name="hit">HIT</string>
    <string name="stay">STAY</string>
</resources>
