<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.dan.blackjackltd.MainActivity">

    <TextView
        android:id="@+id/txtViewWelcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/welcome_message"
        android:background="@color/item"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnSolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="soloButtonClicked"
        android:text="@string/start_solo"
        android:background="@color/active"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCoop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewWelcome" />

    <Button
        android:id="@+id/btnCoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="coopButtonClicked"
        android:text="@string/start_coop"
        android:background="@color/active"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSolo" />

    <Button
        android:id="@+id/btnStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="statsButtonClicked"
        android:text="@string/stats"
        android:background="@color/active"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCoop" />

</android.support.constraint.ConstraintLayout>
