<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Choose Game Mode"
        android:textAlignment="center"
        android:textSize="40sp"
        android:background="@color/item"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/joinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/active"
        android:padding="20dp"
        android:text="@string/join_match"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/hostBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/hostBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/active"
        android:padding="20dp"
        android:text="@string/host_match"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/localBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinBtn" />

    <Button
        android:id="@+id/localBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/active"
        android:padding="20dp"
        android:text="@string/local_match"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hostBtn" />

</android.support.constraint.ConstraintLayout>
